# rnftools

./: .gitignore  .gitmodules  .travis.yml  DOCKER.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  example.snakemake  increment_version.py  index.html  install.sh  mishmash.py  mishmash.snake  mishmash_1.snake  mishmash_2.snake  params.json  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tests.sh  tests_fast.sh  view_todos.sh
.github/workflows/: ci.yml
data/: ebola.fa  hiv.fa  recursive.mk  snakemake.mk
docs/: Makefile  command_line.rst  conf.py  developers.rst  faq.rst  first_steps.rst  getting_started.rst  index.rst  installation.rst  introduction.rst  lavender.rst  make.bat  mishmash.rst  other_information.rst  reference.rst  requirements.txt  resources.rst  rnf.rst  rnftools.rst  tutorial.rst
docs/command_line/: check.txt  dwgsim2rnf.txt  main.txt  mason2rnf.txt  save_help.sh
docs/getting_started/: 02_installation.rst
docs/other_information/: 01_faq.rst  02_developers.rst  03_read_simulators.rst
docs/reference/: 01_mishmash.rst  02_lavender.rst  03_other_tools.rst  03_rnf_format.rst  04_command_line.rst  04_other_tools.rst
docs/resources/: developers.rst  faq.rst  read_simulators.rst
docs/tutorial/: 00_installation.rst  01_first_snakefile.rst  02_simple_simulation.rst  02_simulation.rst  03_evaluation.rst  03_simple_evaluation.rst  05_extending_rnf.rst
example/: .gitignore  Snakefile  example_fa.fa
example/_aux_alignments_/: Snakefile  Snakefile.reads
example/alignments/: .gitignore
example/bams/: Snakefile
example/my_experiment/: my_experimenttmp.1.sam
examples/: .gitignore  example1.fa  example2.fa  run_snakemake.mk
examples/01_simple_read_simulation/: Snakefile
examples/01_tutorial/: Makefile
examples/02_all_simulators_example/: .gitignore  Makefile  Snakefile  hiv.fa
examples/02_more_complex_read_simulation/: .gitignore  Snakefile
examples/03_mapper_evaluation_SE/: Snakefile
examples/04_mapper_evaluation_PE/: .gitignore  Snakefile
examples/04_panel_setting_test/: run.sh
rnftools/: __init__.py  errors.py  include_all.snake  scripts.py  version.py
rnftools/lavender/: Bam.py  Panel.py  Report.py  __init__.py  bam.py  lavender.snake  panel.py  report.py
rnftools/mishmash/: ArtIllumina.py  CuReSim.py  DwgSim.py  FaiIndex.py  MasonIllumina.py  Sample.py  Source.py  WgSim.py  __init__.py  _source.py  artIllumina.py  cuReSim.py  dwgSim.py  masonIllumina.py  mishmash.snake  sample.py  source.py  wgSim.py
rnftools/rnfformat/: ChainDict.py  Formatter.py  FqCreator.py  FqMerger.py  ReadTuple.py  RnfLifter.py  RnfProfile.py  Segment.py  Validator.py  __init__.py  formatter.py  fqCreator.py  read.py  readTuple.py  read_tuple.py  segment.py
rnftools/utils/: Chain.py  ChainSequence.py  FaIdx.py  __init__.py
simulators/: ArtIllumina.py  DwgSim.py  Source.py  all_simulators.snake  dwgsim.py  dwgsim.snake
stylesheets/: styles.css
tests/: .gitignore  Makefile  _test_rnf.sh  tests_clean.sh  tests_install_bats.sh  tests_run.sh
tests/02_PE_simulation/: Snakefile
tests/command_line/: .gitignore  Makefile  Mycobacterium_tuberculosis.fa.fai  __ensure_programs.snake  dwgsim_reads_pe.bfast.fastq  (+28 more)
(+74 files in other folders)
