[metadata]
name = RNFtools
author = Karel Brinda
author-email = karel.brinda@gmail.com
summary = A package for Read Naming Format (RNF).
description-file = README.rst
home-page = http://github.com/karel-brinda/rnftools
requires-python = >=3.2
license = MIT
keywords = Bioinformatics, Computational Biology, Next-Generation Sequencing, Read Simulation, Mappers Evaluation, Snakemake
zip_safe = False
supported-platform = 
	Linux
	MacOS
	CygWin
classifier = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Operating System :: Unix
	Topic :: Scientific/Engineering :: Bio-Informatics

[files]
packages = 
	rnftools
	rnftools.mishmash
	rnftools.lavender
	rnftools.rnfformat

extra_files = 
	setup.py
	README.rst

[entry_points]
console_scripts=
	rnftools = rnftools.scripts:rnftools_script

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
warnerrors = True

[easy_install]

